<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compareHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchByWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare_by_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:useMaterialThemeColors="false"
            app:thumbTint="@color/switch_thumb_tint"
            app:trackTint="@color/switch_track_tint"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="120dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/switchByWeight"
            app:layout_constraintBottom_toBottomOf="@id/switchByWeight"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/fav_orange"
        android:text="@string/label_price_item_n" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:layout_marginTop="16dp"
        android:textAppearance="?attr/textAppearanceBody1"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/fav_orange"
        android:text="@string/add_more"/>
</LinearLayout>
